Added toolbar and hero section

--- a/style.css
+++ b/style.css
@@ -1,3 +1,86 @@
-h1 {
-  color: blue;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+
+* {
+  box-sizing: border-box;
+
 }
+
+
+#toolbar {
+  display: flex;
+  min-height: 7vh;
+}
+
+#toolbar nav img:hover {
+background-color: #cea5a5;
+transition: .3s;
+cursor: pointer;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin: 0 24px;
+}
+
+
+.hero-container{
+  margin: 0 24px;
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: center; */
+  background-image: url("/Pictures/headershapes.png");
+  background-repeat: no-repeat;
+  position: relative;
+  height: 100vh;
+  font-family: 'Poppins', sans-serif;
+  color: #172B4D;
+  
+
+}
+
+.hero h1 {
+  margin: 0 ;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  
+}
+
+.hero p {
+  margin: 0;
+  font-weight: 350;
+  font-size: 16px;
+  
+}
+
+.hero h6 {
+  text-align:start;
+  font-weight: 500;
+  font-size:16px ;
+  margin:10px 0px;
+  
+  color: #7F8CFF;
+}
+
+.social-container {
+ display: flex;
+ justify-content:space-between;
+ width: 48%;
+ margin: 5px 0px;
+}
+
+.social-container img:hover {
+  background-color: #cea5a5;
+  transition: .3s;
+  cursor: pointer;
+  }
