--- a/style.css
+++ b/style.css
@@ -47,8 +47,6 @@ nav {
   flex-direction: column;
   justify-content: center;
   background-repeat: no-repeat;
-  position: relative;
-  height: 100vh;
   font-family: "Poppins", sans-serif;
   color: #172b4d;
 }
@@ -79,3 +77,20 @@ nav {
   margin: 5px 0;
   list-style-type: none;
 }
+
+/* .work {
+  height: ;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 114px 24px;
+  gap: 88px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 16px;
+  gap: 12px;
+} */
