--- a/style.css
+++ b/style.css
@@ -118,15 +118,13 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 0px;
+  padding: 0;
   gap: 12px;
   width: 295px;
-  height: 80px;
 }
 
 .card ul li h1 {
   max-width: 200px;
-  /* height: 36px; */
   font-family: "Poppins";
   font-style: normal;
   font-weight: 700;
@@ -139,7 +137,7 @@ nav {
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 30px 0px;
+  padding: 30px 0;
   gap: 12px;
   width: 236px;
   height: 32px;
@@ -150,7 +148,7 @@ nav {
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 8px 0px;
+  padding: 8px 0;
   width: 55px;
   height: 32px;
 }
@@ -160,7 +158,7 @@ nav {
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 8px 0px;
+  padding: 8px 0;
   width: 88px;
   height: 32px;
 }
@@ -170,7 +168,7 @@ nav {
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 8px 0px;
+  padding: 8px 0;
   width: 29px;
   height: 32px;
 }
@@ -243,7 +241,7 @@ nav {
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 26px 0px;
+  padding: 26px 0;
   gap: 8px;
   width: 203px;
   height: 24px;
