--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
   transition: 0.8s;
   cursor: pointer;
 }
+
 .social-container img:active {
   background-color: #2230d2;
   transition: 0.8s;
@@ -68,7 +69,6 @@ nav {
   background-repeat: no-repeat;
   color: #172b4d;
   width: 375px;
-  /* height: 718px; */
   left: 0;
   top: 0;
 }
@@ -346,6 +346,13 @@ nav {
   align-self: center;
 }
 
+.languages h6 {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  color: #253858;
+}
+
 .tags a h6 {
   width: 29px;
   height: 16px;
@@ -378,7 +385,7 @@ nav {
   background: #6070ff;
   transition: 0.8ms;
   color: white;
-  box-shadow: 0px 8px 16px rgba(64, 83, 252, 0.24);
+  box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
 }
 
 .btn a:active {
@@ -426,13 +433,6 @@ section .languages {
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
-}
-
-.languages h6 {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 15px;
-  color: #253858;
 }
 
 .lang-divs {
@@ -489,6 +489,7 @@ section .languages {
   width: 40px;
   height: 40px;
 }
+
 .lang-arrow-right2 {
   width: 10px;
   height: 10px;
