--- a/style.css
+++ b/style.css
@@ -508,3 +508,16 @@ section .languages {
   width: 40px;
   height: 40px;
 }
+
+footer {
+  margin: 60px 0 0 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: url(/Pictures/Final.svg) no-repeat;
+  background-size: 100% auto;
+  width: 100%;
+  height: 779px;
+}
