--- a/style.css
+++ b/style.css
@@ -521,3 +521,25 @@ footer {
   width: 100%;
   height: 779px;
 }
+
+footer h3 {
+  width: 801px;
+  height: 56px;
+  margin-top: 120px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  color: #fff;
+  text-align: center;
+}
+
+footer p {
+  width: 327px;
+  height: 102px;
+  margin: 19px 0;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  color: #ebebff;
+  text-align: center;
+}
