--- a/style.css
+++ b/style.css
@@ -543,3 +543,24 @@ footer p {
   color: #ebebff;
   text-align: center;
 }
+
+footer form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 60px 0;
+}
+
+.input {
+  width: 327px;
+  height: 48px;
+  border: 1px solid #cfd8dc;
+  border-radius: 8px;
+  font-family: "Poppins", sans-serif;
+  color: #172b4d;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  margin: 8px 0;
+  padding: 0 0 0 16px;
+}
