--- a/style.css
+++ b/style.css
@@ -59,8 +59,8 @@ nav {
 }
 
 .hero {
-  background-position: fixed;
-  background-image: url("./Pictures/headershapes.png");
+  background: url("./Pictures/headershapes.png") no-repeat;
+  background-size: 100%;
   gap: 12px;
   padding: 114px 24px;
   display: flex;
@@ -68,7 +68,7 @@ nav {
   justify-content: center;
   background-repeat: no-repeat;
   color: #172b4d;
-  width: 375px;
+  width: auto;
   left: 0;
   top: 0;
 }
@@ -443,7 +443,7 @@ section .languages {
 footer h3 {
   width: 801px;
   height: 56px;
-  margin-top: 120px;
+  margin-top: 100px;
   font-style: normal;
   font-weight: 700;
   font-size: 40px;
@@ -532,7 +532,7 @@ footer h3 {
 }
 
 footer {
-  margin: 60px 0 0 0;
+  margin: 0;
   padding: 0;
   display: flex;
   flex-direction: column;
@@ -541,7 +541,8 @@ footer {
   background: url(./Pictures/Final.svg) no-repeat;
   background-size: 100% auto;
   width: 100%;
-  height: 779px;
+  height: auto;
+  background-color: #6070ff;
 }
 
 footer form {
@@ -552,7 +553,7 @@ footer form {
 }
 
 .input {
-  width: 327px;
+  width: 300px;
   height: 48px;
   border: 1px solid #cfd8dc;
   border-radius: 8px;
@@ -566,7 +567,7 @@ footer form {
 }
 
 .input-textarea {
-  width: 327px;
+  width: 300px;
   height: 170px;
   border: 1px solid #cfd8dc;
   text-align: start;
@@ -609,7 +610,7 @@ footer .btn {
   border: none;
   border-radius: 8px;
   text-align: center;
-  margin: 14px 185px 14px 0;
+  margin: 14px 160px 14px 0;
 }
 
 footer .btn:hover {
