--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 }
 
 #toolbar {
+  width: 100%;
   display: flex;
   min-height: 7vh;
   border-bottom-left-radius: 23px;
@@ -47,10 +48,10 @@ body {
 }
 
 nav {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
   margin: 0 24px;
 }
 
@@ -60,15 +61,16 @@ nav {
 
 .hero {
   background: url("./Pictures/headershapes.png") no-repeat;
-  background-size: 100%;
+  background-size: 100% auto;
   gap: 12px;
   padding: 114px 24px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-repeat: no-repeat;
+  align-items: flex-start;
   color: #172b4d;
-  width: auto;
+  width: 100%;
+  height: 650px;
   left: 0;
   top: 0;
 }
@@ -107,7 +109,7 @@ footer p {
 .social-container {
   display: flex;
   justify-content: space-between;
-  width: 50%;
+  width: 170px;
   margin: 5px 0;
   list-style-type: none;
 }
@@ -118,7 +120,7 @@ footer p {
   grid-template-rows: 4fr;
   justify-content: center;
   align-items: center;
-  width: 375px;
+  width: 100%;
   padding: 114px 24px;
   margin: -100px 0;
   gap: 88px;
@@ -135,7 +137,7 @@ footer p {
 }
 
 .card {
-  width: 327px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -164,6 +166,7 @@ footer p {
   font-style: normal;
   font-weight: 700;
   font-size: 40px;
+  margin: 80px 0 0 0;
 }
 
 .card ul li h2 {
@@ -417,33 +420,42 @@ footer p {
   color: white;
 }
 
+.about-container {
+  width: 100vw;
+  height: 1125.15px;
+  margin: 100px 0 0 0;
+  padding: 0;
+}
+
 .about {
+  width: 100%;
+  height: 571px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
   gap: 12px;
   border: 1px solid white;
   border-top-right-radius: 50px;
   background: white;
-  margin-top: 65px;
+  margin-top: 114px;
   padding: 100px 24px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   color: #172b4d;
-  width: 375px;
 }
 
 section .languages {
   width: 100%;
-  margin: 26px 0;
-}
-
-.languages ul {
-  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 footer h3 {
-  width: 801px;
   height: 56px;
-  margin-top: 100px;
+  margin-top: 120px;
   font-style: normal;
   font-weight: 700;
   font-size: 40px;
@@ -452,87 +464,62 @@ footer h3 {
 }
 
 .languages h3 {
+  width: 240px;
+  height: 24px;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
 }
 
 .lang-divs {
+  width: 303px;
+  height: 66.72px;
   display: flex;
   align-items: center;
   padding: 30px 0;
-  height: 32px;
 }
 
 #lang {
   background-color: #f7f7f9;
-  margin: 12px 0;
+  margin: 10px 0;
+}
+
+.lang-seperators {
+  width: 327px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 0 0 40px;
+}
+
+.lang-seperators img {
+  width: 327px;
 }
 
 .lang-skills {
   display: flex;
-  align-items: baseline;
+  padding: 20px;
+  margin: 0 54px 0 0;
 }
 
-.lang-arrow-down {
-  width: 10px;
-  height: 10px;
-  background: #acb7c3;
-  position: relative;
-  transform: rotate(135deg);
-  left: 176px;
+.fa-chevron-down {
+  width: 12px;
+  height: 12px;
+  display: flex;
+  align-items: center;
+  color: #738da8;
 }
 
-.lang-arrow-down::after {
-  content: "";
-  position: absolute;
-  width: 40px;
-  height: 40px;
-  background: white;
-  top: 1.2px;
-  right: 1.2px;
-}
-
-.lang-arrow-right1 {
-  width: 10px;
-  height: 10px;
-  background: #acb7c3;
-  position: relative;
-  transform: rotate(45deg);
-  left: 162px;
-}
-
-.lang-arrow-right1::after {
-  content: "";
-  position: absolute;
-  background: white;
-  top: 1.2px;
-  right: 1.2px;
-  width: 40px;
-  height: 40px;
-}
-
-.lang-arrow-right2 {
-  width: 10px;
-  height: 10px;
-  background: #acb7c3;
-  position: relative;
-  transform: rotate(45deg);
-  left: 236px;
-}
-
-.lang-arrow-right2::after {
-  content: "";
-  position: absolute;
-  background: white;
-  top: 1.2px;
-  right: 1.2px;
-  width: 40px;
-  height: 40px;
+.fa-chevron-right {
+  width: 12px;
+  height: 22px;
+  display: flex;
+  align-items: center;
+  color: #738da8;
 }
 
 footer {
-  margin: 0;
+  margin: 60px 0 0 0;
   padding: 0;
   display: flex;
   flex-direction: column;
@@ -541,7 +528,7 @@ footer {
   background: url(./Pictures/Final.svg) no-repeat;
   background-size: 100% auto;
   width: 100%;
-  height: auto;
+  height: 779px;
   background-color: #6070ff;
 }
 
