--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ body {
   border-bottom-left-radius: 23px;
 }
 
+nav ul {
+  display: none;
+}
+
 .languages img {
   padding: 16px;
   position: relative;
@@ -623,13 +627,41 @@ footer .btn:active {
 
   .burger-menu {
     display: none;
+    height: 0;
+    width: 0;
+    margin: 0;
+    padding: 0;
+  }
+
+  nav {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  nav ul {
+    width: 60%;
+    display: flex;
+    justify-content: flex-end;
+    gap: 24px;
+  }
+
+  nav ul li {
+    text-decoration: none;
+    list-style-type: none;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 15px;
+    color: #344563;
+  }
+
+  .logo-nav {
+    margin: 0 0 0 120px;
   }
 
   .hero {
     align-items: center;
     background-image: url(./desktopPics/Hero\ Desktop\ Background.svg);
     background-size: 100% auto;
-    width: 1440px;
     height: 916px;
   }
 
