Change Contact me section background in media query

--- a/style.css
+++ b/style.css
@@ -719,4 +719,9 @@ footer .btn:active {
   #pos-swap {
     order: 1;
   }
+
+  footer {
+    background-image: url(./desktopPics/Contact-form-desktop.svg);
+    background-size: 100% auto;
+  }
 }
