Add animation to hero section paragraph

--- a/style.css
+++ b/style.css
@@ -706,6 +706,18 @@ footer .btn:active {
     font-weight: 400;
     font-size: 20px;
     color: #344563;
+    animation-duration: 3s;
+    animation-name: slidein;
+  }
+
+  @keyframes slidein {
+    from {
+      margin-left: 100%
+    }
+
+    to {
+      margin-left: 0%
+    }
   }
 
   .hero h6 {
