--- a/style.css
+++ b/style.css
@@ -712,11 +712,11 @@ footer .btn:active {
 
   @keyframes slidein {
     from {
-      margin-left: 100%
+      margin-left: 100%;
     }
 
     to {
-      margin-left: 0%
+      margin-left: 0%;
     }
   }
 
