--- a/style.css
+++ b/style.css
@@ -26,6 +26,40 @@ nav ul {
   display: none;
 }
 
+.menu-bar {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  width: 0;
+  height: 0;
+  background: rgba(96, 112, 255);
+  mix-blend-mode: multiply;
+  position: fixed;
+  top: 0;
+  right: 0;
+  overflow: hidden;
+  transition: width 0.5s height 0.5s;
+}
+
+.menu-bar.open-bar {
+  width: 100%;
+  height: 100vh;
+}
+
+.menu-bar ul {
+  margin: 50px 25px;
+  padding: 30px 2px;
+  list-style-type: none;
+}
+
+.menu-bar ul li a {
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 32px;
+  color: white;
+}
+
 .languages img {
   padding: 16px;
   position: relative;
