--- a/style.css
+++ b/style.css
@@ -37,13 +37,16 @@ nav ul {
   position: fixed;
   top: 0;
   right: 0;
+  z-index: 100;
   overflow: hidden;
-  transition: width 0.5s height 0.5s;
+  border-bottom-left-radius: 100%;
+  transition: width 0.5s, height 0.5s, border-radius 0.5s;
 }
 
 .menu-bar.open-bar {
   width: 100%;
   height: 100vh;
+  border-bottom-left-radius: 0;
 }
 
 .menu-bar ul {
